--- a/src/mysql/CMakeLists.txt
+++ b/src/mysql/CMakeLists.txt
@@ -2,11 +2,11 @@ add_library(mysql SHARED)
 add_dependencies(mysql proto)
 
 target_sources(mysql PRIVATE
+    CsvBuffer.cc
     LocalInfile.cc
     MySqlConfig.cc
     MySqlConnection.cc
     MySqlUtils.cc
-    RowBuffer.cc
     SchemaFactory.cc
 )
 
@@ -24,6 +24,23 @@ add_executable(testLocalInfile testLocalInfile.cc)
 target_link_libraries(testLocalInfile
     mysql
     Boost::unit_test_framework
+)
+
+FUNCTION(mysql_tests)
+    FOREACH(TEST IN ITEMS ${ARGV})
+        add_executable(${TEST} ${TEST}.cc)
+        target_link_libraries(${TEST} PUBLIC
+            mysql
+            Boost::unit_test_framework
+            Threads::Threads
+        )
+        add_test(NAME ${TEST} COMMAND ${TEST})
+    ENDFOREACH()
+ENDFUNCTION()
+
+mysql_tests(
+    testMySqlUtils
+    testCsvBuffer
 )
 
 # Even though the test is commented out, leave this so it's findable by searching for
