--- a/src/mysql/CMakeLists.txt
+++ b/src/mysql/CMakeLists.txt
@@ -12,6 +12,7 @@ target_sources(mysql PRIVATE
 target_link_libraries(mysql PUBLIC
     log
     mysqlclient_r
+    util
 )
 
 install(
@@ -22,6 +23,7 @@ add_executable(testLocalInfile testLocalInfile.cc)
 
 target_link_libraries(testLocalInfile
     mysql
+    util
     Boost::unit_test_framework
 )
 
