--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -80,8 +80,10 @@ add_subdirectory(schema)
 add_subdirectory(sql)
 add_subdirectory(util)
 add_subdirectory(wbase)
+add_subdirectory(wcomms)
 add_subdirectory(wconfig)
 add_subdirectory(wcontrol)
+add_subdirectory(wmain)
 add_subdirectory(worker)
 add_subdirectory(wdb)
 add_subdirectory(wpublish)
