Passes integration tests without xrootd.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,7 +20,7 @@ find_package(Lua51 REQUIRED)
 find_package(Protobuf REQUIRED)
 find_package(pybind11 REQUIRED)
 find_package(Threads REQUIRED)
-find_package(XRootD REQUIRED)
+# &&& find_package(XRootD REQUIRED)
 find_package(httplib REQUIRED)
 find_package(aws-c-auth REQUIRED)
 find_package(aws-c-cal REQUIRED)
@@ -89,7 +89,7 @@ add_subdirectory(wdb)
 add_subdirectory(wpublish)
 add_subdirectory(wsched)
 add_subdirectory(www)
-add_subdirectory(xrdlog)
-add_subdirectory(xrdsvc)
+# &&& add_subdirectory(xrdlog)
+# &&& add_subdirectory(xrdsvc)
 
 
