--- a/src/replica/qserv/CMakeLists.txt
+++ b/src/replica/qserv/CMakeLists.txt
@@ -19,7 +19,7 @@ target_sources(replica_qserv PRIVATE
     RemoveReplicaQservMgtRequest.cc
     SetReplicasQservMgtRequest.cc
     TestEchoQservMgtRequest.cc
-    XrdCmsgetVnId.cc
+# &&&    XrdCmsgetVnId.cc
 )
 target_link_libraries(replica_qserv PUBLIC
     log
