--- a/admin/local/docker/compose/docker-compose.yml
+++ b/admin/local/docker/compose/docker-compose.yml
@@ -404,6 +404,8 @@ services:
           --http-ssl-private-key-file /config-etc/ssl/czar-key.pem
           --http-tmp-dir /tmp
           --http-conn-pool-size 2
+          --user qsmaster
+          --password CHANGEME2
           --log-cfg-file=/config-etc/log/log-czar-proxy.cnf
           --repl-instance-id qserv_proj
           --repl-auth-key replauthkey
