Temporary workaround for a problem with the stock version of sphinx-prompt

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ description = Python environment.
 deps =
     sphinx
     documenteer[guide]
+    sphinx-prompt<1.10
 
 [testenv:docs]
 description = Build documentation (HTML) with Sphinx.
