Code changes to test FIFO vs Shared scan.

--- a/src/wsched/CMakeLists.txt
+++ b/src/wsched/CMakeLists.txt
@@ -4,8 +4,9 @@ target_sources(wsched PRIVATE
     BlendScheduler.cc
     ChunkTasksQueue.cc
     GroupScheduler.cc
-    ScanScheduler.cc
     SchedulerBase.cc
+    ScanScheduler.cc
+    ScanSchedFifo.cc
 )
 
 install(
