Translation and validation for MySQL objects and file system names

--- a/src/replica/CMakeLists.txt
+++ b/src/replica/CMakeLists.txt
@@ -103,6 +103,7 @@ replica_tests(
     testJson
     testMessageQueue
     testNamedMutexRegistry
+    testMySQLObjNameTrans
     testQueryGenerator
     testReplicaInfo
     testSemanticMap
