Reimplemented the query progress history tracking
The new implementation has now a persistent backend where progress
histories of the completed queries are archived.

--- a/src/qmeta/CMakeLists.txt
+++ b/src/qmeta/CMakeLists.txt
@@ -6,6 +6,7 @@ target_sources(qmeta PRIVATE
     QMetaSelect.cc
     QMetaTransaction.cc
     QProgress.cc
+    QProgressHistory.cc
 )
 
 target_link_libraries(qmeta PUBLIC
