Extended QMeta schema and implementation to support user tables
The new implementation provides a persistent backend (tables) and
the transient API for recording and maintaining info in ingesting
user tables in Qserv.

--- a/src/qmeta/CMakeLists.txt
+++ b/src/qmeta/CMakeLists.txt
@@ -7,6 +7,8 @@ target_sources(qmeta PRIVATE
     QMetaTransaction.cc
     QProgress.cc
     QProgressHistory.cc
+    UserTables.cc
+    UserTableIngestRequest.cc
 )
 
 target_link_libraries(qmeta PUBLIC
