Use single dummy mariadb password

--- a/deploy/compose/docker-compose.yml
+++ b/deploy/compose/docker-compose.yml
@@ -102,7 +102,7 @@ services:
         << : *worker-xrootd
         command: >
           entrypoint worker-xrootd
-          --db-uri mysql://qsmaster:CHANGEME2@127.0.0.1:3306
+          --db-uri mysql://qsmaster:CHANGEME@127.0.0.1:3306
           --db-admin-uri mysql://root:CHANGEME@127.0.0.1:3306
           --vnid-config "@/usr/local/lib64/libreplica.so {{db_uri}}/qservw_worker 0 0"
           --repl-instance-id qserv_proj
@@ -137,8 +137,8 @@ services:
         << : *worker-cmsd
         command: >
           entrypoint worker-cmsd
-          --db-uri mysql://qsmaster:CHANGEME2@worker-mariadb-0:3306
-          --vnid-config "@/usr/local/lib64/libreplica.so mysql://qsmaster:CHANGEME2@127.0.0.1:3306/qservw_worker 0 0"
+          --db-uri mysql://qsmaster:CHANGEME@worker-mariadb-0:3306
+          --vnid-config "@/usr/local/lib64/libreplica.so mysql://qsmaster:CHANGEME@127.0.0.1:3306/qservw_worker 0 0"
           --results-dirname /qserv/data/results
           --repl-instance-id qserv_proj
           --repl-auth-key replauthkey
@@ -207,9 +207,9 @@ services:
         << : *worker-xrootd
         command: >
           entrypoint --log-level DEBUG worker-xrootd
-          --db-uri mysql://qsmaster:CHANGEME2@127.0.0.1:3306?socket={{db_socket}}
+          --db-uri mysql://qsmaster:CHANGEME@127.0.0.1:3306?socket={{db_socket}}
           --db-admin-uri mysql://root:CHANGEME@127.0.0.1:3306?socket={{db_socket}}
-          --vnid-config "@/usr/local/lib64/libreplica.so mysql://qsmaster:CHANGEME2@127.0.0.1:3306/qservw_worker 0 0"
+          --vnid-config "@/usr/local/lib64/libreplica.so mysql://qsmaster:CHANGEME@127.0.0.1:3306/qservw_worker 0 0"
           --repl-instance-id qserv_proj
           --repl-auth-key replauthkey
           --repl-admin-auth-key=repladminauthkey
@@ -243,8 +243,8 @@ services:
         << : *worker-cmsd
         command: >
           entrypoint --log-level DEBUG worker-cmsd
-          --db-uri mysql://qsmaster:CHANGEME2@worker-mariadb-1:3306?socket=/qserv/mariadb/run/mysqld.sock
-          --vnid-config "@/usr/local/lib64/libreplica.so mysql://qsmaster:CHANGEME2@127.0.0.1:3306/qservw_worker 0 0"
+          --db-uri mysql://qsmaster:CHANGEME@worker-mariadb-1:3306?socket=/qserv/mariadb/run/mysqld.sock
+          --vnid-config "@/usr/local/lib64/libreplica.so mysql://qsmaster:CHANGEME@127.0.0.1:3306/qservw_worker 0 0"
           --results-dirname /qserv/data/results
           --repl-instance-id qserv_proj
           --repl-auth-key replauthkey
@@ -356,7 +356,7 @@ services:
         init: true
         command: >
           entrypoint --log-level DEBUG proxy
-          --db-uri mysql://qsmaster:CHANGEME2@127.0.0.1:3306?socket={{db_socket}}
+          --db-uri mysql://qsmaster:CHANGEME@127.0.0.1:3306?socket={{db_socket}}
           --db-admin-uri mysql://root:CHANGEME@127.0.0.1:3306?socket={{db_socket}}
           --targs db_socket=/qserv/mariadb/run/mysqld.sock
           --xrootd-manager czar-xrootd
@@ -394,7 +394,7 @@ services:
         init: true
         command: >
           entrypoint --log-level DEBUG czar-http
-          --db-uri mysql://qsmaster:CHANGEME2@czar-mariadb:3306/
+          --db-uri mysql://qsmaster:CHANGEME@czar-mariadb:3306/
           --xrootd-manager czar-xrootd
           --czar-name http
           --http-port 4048
@@ -405,7 +405,7 @@ services:
           --http-tmp-dir /tmp
           --http-conn-pool-size 2
           --user qsmaster
-          --password CHANGEME2
+          --password CHANGEME
           --log-cfg-file=/config-etc/log/log-czar-proxy.cnf
           --repl-instance-id qserv_proj
           --repl-auth-key replauthkey
