--- a/src/ccontrol/CMakeLists.txt
+++ b/src/ccontrol/CMakeLists.txt
@@ -32,10 +32,7 @@ target_link_libraries(ccontrol PUBLIC
     sphgeom
 )
 
-install(
-	TARGETS ccontrol
-)
-
+install(TARGETS ccontrol)
 
 FUNCTION(ccontrol_tests)
     FOREACH(TEST IN ITEMS ${ARGV})
@@ -65,6 +62,3 @@ ccontrol_tests(
     testCControl
     testUserQueryType
 )
-
-# set_tests_properties(testCControl PROPERTIES WILL_FAIL 1)
-
