--- a/src/global/CMakeLists.txt
+++ b/src/global/CMakeLists.txt
@@ -9,13 +9,11 @@ target_sources(global PRIVATE
     UberJobBase.cc
 )
 
-install(
-	TARGETS global
-)
-
 target_link_libraries(global PUBLIC
     log
 )
+
+install(TARGETS global)
 
 FUNCTION(global_tests)
     FOREACH(TEST IN ITEMS ${ARGV})
