--- a/src/mysql/CMakeLists.txt
+++ b/src/mysql/CMakeLists.txt
@@ -16,9 +16,7 @@ target_link_libraries(mysql PUBLIC
     util
 )
 
-install(
-    TARGETS mysql
-)
+install(TARGETS mysql)
 
 add_executable(testLocalInfile testLocalInfile.cc)
 
