--- a/src/wcontrol/CMakeLists.txt
+++ b/src/wcontrol/CMakeLists.txt
@@ -8,10 +8,7 @@ target_sources(wcontrol PRIVATE
     WCzarInfoMap.cc
 )
 
-install(
-    TARGETS wcontrol
-)
-
+install(TARGETS wcontrol)
 
 target_link_libraries(wcontrol PUBLIC
     log
