--- a/src/cconfig/CMakeLists.txt
+++ b/src/cconfig/CMakeLists.txt
@@ -4,15 +4,8 @@ target_sources(cconfig PRIVATE
     CzarConfig.cc
 )
 
-
 target_link_libraries(cconfig PUBLIC
     log
 )
 
-install(
-	TARGETS cconfig
-)
-
-install(
-    TARGETS cconfig
-)
+install(TARGETS cconfig)
