--- a/src/replica/CMakeLists.txt
+++ b/src/replica/CMakeLists.txt
@@ -67,9 +67,7 @@ replica_utils(
     qserv-replica-worker
 )
 
-install(
-    TARGETS replica
-)
+install(TARGETS replica)
 
 function(REPLICA_TESTS)
     foreach(TEST IN ITEMS ${ARGV})
@@ -120,6 +118,3 @@ add_subdirectory(requests)
 add_subdirectory(services)
 add_subdirectory(util)
 add_subdirectory(worker)
-
-# set_tests_properties(testIngestRequestMgr PROPERTIES WILL_FAIL 1)
-
