--- a/src/wmain/CMakeLists.txt
+++ b/src/wmain/CMakeLists.txt
@@ -4,29 +4,26 @@ target_sources(workerm PRIVATE
     WorkerMain.cc
 )
 
-
 target_link_libraries(workerm PUBLIC
-     boost_filesystem
-     boost_system
-     global
-     http
-     log
-     mysql
-     protojson
-     sql
-     wbase
-     wcomms
-     wconfig
-     wcontrol
-     wdb
-     wpublish
-     wsched
+    boost_filesystem
+    boost_system
+    global
+    http
+    log
+    mysql
+    protojson
+    sql
+    wbase
+    wcomms
+    wconfig
+    wcontrol
+    wdb
+    wpublish
+    wsched
     boost_program_options
- )
+)
 
-install(
- 	TARGETS workerm
-)	
+install(TARGETS workerm)
 
 function(WORKERM_UTILS)
     foreach(UTIL IN ITEMS ${ARGV})
@@ -43,5 +40,3 @@ endfunction()
 workerm_utils(
     qserv-worker-http
 )
-
-
