Added support for ingesting partitioned director tables
Refactoring in the HTTP modules where it was needed to implement
the new feature and to prevent unnecessary code duplication.

--- a/src/czar/CMakeLists.txt
+++ b/src/czar/CMakeLists.txt
@@ -48,6 +48,7 @@ function(CZAR_UTILS)
             global
             mysql
             parser
+            partition
             qana
             qdisp
             qproc
