--- a/src/qproc/CMakeLists.txt
+++ b/src/qproc/CMakeLists.txt
@@ -26,6 +26,7 @@ FUNCTION(qproc_tests)
             cconfig
             ccontrol
             czar
+            global
             parser
             qana
             qdisp
